added deploy profile to angular.json

--- a/krrli-github-io/angular.json
+++ b/krrli-github-io/angular.json
@@ -75,6 +75,14 @@
             }
           }
         },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://krrli.github.io/",
+            "name": "Carla Iten",
+            "branch": "master"
+          }
+        },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
