fix angular.json and package.json

--- a/krrli-github-io/angular.json
+++ b/krrli-github-io/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -103,7 +103,6 @@
             "styles": [
               "src/styles.scss"
             ]
-
           }
         },
         "lint": {
@@ -132,6 +131,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "krrli-github-io"
 }
