--- a/krrli-github-io/angular.json
+++ b/krrli-github-io/angular.json
@@ -79,8 +79,7 @@
           "builder": "angular-cli-ghpages:deploy",
           "options": {
             "baseHref": "https://krrli.github.io/",
-            "name": "Carla Iten",
-            "branch": "master"
+            "name": "Carla Iten"
           }
         },
         "extract-i18n": {
